@@ -1,5 +1,12 @@
 2005-11-05  Dennis Cranston  <dennis_cranston@yahoo.com>
 
+	* gsearchtool.h: Define NUM_VISIBLE_COLUMNS.
+	* gsearchtool-callbacks.c: (columns_changed_cb):  Do not
+	save order of columns if order length does not match
+	NUM_VISIBLE_COLUMNS.
+
+2005-11-05  Dennis Cranston  <dennis_cranston@yahoo.com>
+
 	* gsearchtool.c: (gsearch_equal_func): Change comparision
 	to be case insensitive.
 
